--- a/archivo2.html
+++ b/archivo2.html
@@ -7,6 +7,12 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body class="fondo">
+    <div class="columnas">
+        <div class="columna white"></div>
+        <div class="columna color"></div>
+        <div class="columna white"></div>
+    </div>
+<div class="formulario">
     <form action="index.html" method="GET">
         <label for="name">Nombre:</label>
         <input type="text" id="name" name="name">
@@ -18,6 +24,8 @@
         <input type="password" id="password" name="password">
       
         <button type="submit">Enviar</button>
+</div>
       </form>
+
 </body>
 </html>
