actualizacion de html y css

--- a/AddAlbum.html
+++ b/AddAlbum.html
@@ -6,12 +6,12 @@
     <link href="styles.css" rel="stylesheet">
     <title>Album</title>
 </head>
-<body>
-    <div><h3>Nuevo Album</h3></div>
-    <form>
+<body class="cuerpo">
+    <div class="album"><h3>Nuevo Album</h3></div>
+    <form class="album1">
         <label>Titulo: <input type="text" name="Titulo">
         <label>Año del lanzamiento del album: <input type="number" name="Año del lanzamiento del album"></label>
-        <label>Descripción: <input type="Descripción" name="Descripción"></label>
+        <label>Descripción: <input type="Descripción" name="Descripción" id="description"></label>
         <label for="image-url">Imagen URL:</label>
         <input type="url" id="image-url" name="image-url" placeholder="Agrega la URL de la imagen">
         <input type="submit">
