actualizacion de html y css

--- a/AddAlbum.html
+++ b/AddAlbum.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
-    <title>Album</title>
+    <title>Álbum</title>
 </head>
 <body class="cuerpo">
-    <div class="album"><h3>Nuevo Album</h3></div>
+    <div class="album"><h3>Nuevo Álbum</h3></div>
     <form class="album1">
-        <label>Titulo: <input type="text" name="Titulo">
-        <label>Año del lanzamiento del album: <input type="number" name="Año del lanzamiento del album"></label>
+        <label>Título: <input type="text" name="Titulo">
+        <label>Año del lanzamiento del álbum: <input type="number" name="Año del lanzamiento del album"></label>
         <label>Descripción: <input type="Descripción" name="Descripción" id="description"></label>
         <label for="image-url">Imagen URL:</label>
         <input type="url" id="image-url" name="image-url" placeholder="Agrega la URL de la imagen">
