--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <center>
     <h1>Stefani Joanne Angelina Germanotta</h1>
-    <h2>Biografia</h2>
+    <h2>Biografía</h2>
     <p>Nació el dia 28 de Marzo de 1986 en New York, Estados Unidos.
         Es una cantante, compositora, productora, bailarina, actriz, activista y diseñadora de moda.
         Estudió en la escuela "Convent of the Sacred Heart" y asistió a la "Tish School of the Arts". 
