--- a/signUp.html
+++ b/signUp.html
@@ -7,8 +7,8 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <h3>Registro</h3>
-    <form>
+    <h3 class="h3">Registro</h3>
+    <form class="login">
         <label>Nombre: <input type="text" name="nombre"></label>
         <label>E-mail: <input type="email" name="E-mail"></label>
         <label>Edad: <input type="number" name="edad"></label>
